frontend/test/should_fail/index_exec_loop_edge_fromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	for{e:AEdge in edgesFromIndexFromToAscending(j, j, j + 1); true }
}